# agent-island

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
crates/agent_monitor_core/: Cargo.toml
crates/agent_monitor_core/src/: lib.rs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActionTray.tsx  IslandShell.tsx  MarqueeText.tsx  RichText.tsx  SessionDetail.tsx  SessionStack.tsx
src/hooks/: useAudioNotifications.ts
src/lib/: bridge.ts  sessionText.ts  types.ts  windowMotion.ts
